# tuneBR

./: CMakeLists.txt  README  README.md  config.ini  tuneBR.py
modules/: .sigma_bo.py.swo  .sigma_bo.py.swp  odb.py  rsbo_plotter.py  setting_env.py  sigma_bo.py  sigma_bo_.py
src/: CMakeLists.txt  readgsa.F90
